# billsim

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml
docs/: mobile.md  scenario-format.md  wire-format.md
examples/: landing_map.rs  throughput.rs
python/billsim/: __init__.py  railbird.py
python/tests/: test_railbird_adapter.py
scripts/: build-mobile-bindings.sh
src/: aiming.rs  detection.rs  ffi.rs  lib.rs  math.rs  model.rs  physics.rs  position.rs  scenario.rs  simulation.rs  table.rs
tests/: aiming.rs  free_motion.rs  pooltool_044_conformance.rs  position_diversity.rs  position_search.rs  scenario_cases.rs  table_events.rs
tests/scenarios/: bu_f5_hexagon_zone.json  bu_f5_position_1_direct.json  ross_four_track_breakout.json
wasm-bindings/: Cargo.toml
wasm-bindings/src/: lib.rs
