[package]
name = "billsim"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Portable, headless billiards simulation for Railbird"
license = "Apache-2.0"

[lib]
name = "billsim"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib", "staticlib"]

[features]
default = []
python = ["dep:pyo3"]
uniffi-bindings = ["dep:uniffi"]
bindgen-cli = ["uniffi-bindings", "uniffi/cli"]

[[bin]]
name = "billsim-bindgen"
path = "src/bin/billsim-bindgen.rs"
required-features = ["bindgen-cli"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module"], optional = true }
roots = "0.0.8"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uniffi = { version = "0.32.0", default-features = false, optional = true }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
