[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[project]
name = "billsim"
version = "0.1.0"
description = "Python and Railbird adapter for the billsim Rust physics kernel"
requires-python = ">=3.10"

[tool.maturin]
features = ["python"]
module-name = "billsim._native"
python-source = "python"
